syntax = "proto3";
package GrpcQuantex;

option go_package = "github.com/zsmartex/pkg/Grpc/quantex;GrpcQuantex";

import "google/protobuf/empty.proto";
import "proto/order.proto";

message UpdateOrderRequest {
  GrpcOrder.Order order = 1;
}

message ReloadStrategyRequest {
  int64 strategy_id = 1;
}

service QuantexService {
  rpc UpdateOrder(UpdateOrderRequest) returns (google.protobuf.Empty) {}
  rpc ReloadStrategy(ReloadStrategyRequest) returns (google.protobuf.Empty) {}
}
